@@ -1,4 +1,4 @@
-Site_id	Site_name	Parameters	Start_date	End_date	Remark
+Site_id	Site_name	Parameters	Start_date	End_date
 435152112443101	ANP 6		1/1/1986	12/31/2009
 434856112400001	ANP 9	AL, SB, CO, CU, MN, O-PO4 as P, TOC, PB	1/1/1994	12/31/2009
 433509112384801	ARBOR TEST	CR	1/1/1989	12/31/2009
